# gru-ui

./: Cargo.toml  README.txt  TODO.txt
gru-ui-derive/: Cargo.toml
gru-ui-derive/src/: lib.rs
src/: event.rs  lens.rs  lib.rs  paint.rs  style.rs
src/layout/: mod.rs
src/paint/: mod.rs  style.rs
src/widget/: compose.rs  data.rs  dynamic.rs  interact.rs  mod.rs  primitive.rs  watch.rs
src/widget/layout/: flex.rs  mod.rs
