[workspace]
members = ["gru-ui-derive"]

[package]
name = "gru-ui"
version = "0.1.0"
authors = ["Jannik Fehre"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
gru-ui-derive = { path = "gru-ui-derive" }
gru-misc = { path = "../gru-misc", features = ["math", "text_sdf", "color"] }
copypasta = "0.10.0"
