[workspace]
members = ["gru-ui-derive"]

[package]
name = "gru-ui"
version = "0.1.0"
authors = ["Jannik Fehre", "Fabian Osyguß"]
license = "MIT"
edition = "2024"

[dependencies]
gru-ui-derive = { path = "gru-ui-derive" }
gru-misc = { path = "../gru-misc", git = "https://github.com/Osyfe/gru-misc.git", features = ["math", "text_sdf", "color"] }
copypasta = "0.10.1"
